--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <thead>
             <tr>
                 <th>ASSUNTOS</th>
-                <th>PARÁGRAFOS CIC</th>
-                <th>CITAÇÕES</th>
+                <th>📙 PARÁGRAFOS CIC</th>
+                <th>📖 CITAÇÕES</th>
             </tr>
         </thead>
         <tbody>
@@ -45,7 +45,7 @@
             <tr>
                 <td><i>Beleza do céu e conhecimento de Deus</i></td>
                 <td>32</td>
-                <td>📖 Sb 13, 1 - 9</td>
+                <td>Sb 13, 1 - 9</td>
             </tr>
             <tr>
                 <td><i>Deus, criador do céu e da terra</i></td>
