--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <thead>
             <tr>
                 <th>ASSUNTOS</th>
-                <th>📙 PARÁGRAFOS CIC</th>
-                <th>📖 CITAÇÕES</th>
+                <th>PARÁGRAFOS CIC</th>
+                <th>CITAÇÕES</th>
             </tr>
         </thead>
         <tbody>
