--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="pt-br">
 
 <head>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Estudos Bíblicos" />
+    <meta property="og:description" content="Estudos sobre a doutrina da Igreja Católica" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/danilogoncalves94/Nova_Opcao_Gesso/main/imagens/imagem_fundo.jpg" />
+    <meta property="og:image:width" content="640" />
+    <meta property="og:image:height" content="373" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:url" content="https://danilogoncalves94.github.io/estudos-biblicos/" />
+    <meta property="og:site_name" content="Estudos Bíblicos" />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
