--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
                 <td></td>
                 <td>1 Cor 15, 35 - 53</td>
             </tr>
+            <tr>
+                <td><i>Paciência; O temor a Deus</i></td>
+                <td></td>
+                <td>Eclo 2, 1 - 13</td>
+            </tr>
         </tbody>
     </table>
 </body>
