--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                 <td></td>
                 <td onclick="fbible7()">Eclo 2, 1 - 13</td>
             </tr>
+            <tr>
+                <td><i>Armadura do cristão</i></td>
+                <td></td>
+                <td onclick="fbible8()">Ef 6, 10 - 20</td>
+            </tr>
         </tbody>
     </table>
 </body>
