--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <thead>
             <tr>
                 <th onclick="assuntos()">ASSUNTOS</th>
-                <th>PARÁGRAFOS CIC 📙</th>
+                <th>CATECISMO 📙</th>
                 <th>CITAÇÕES 📖</th>
             </tr>
         </thead>
