--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="js.js"></script>
-    <title>Estudos Bíblicos</title>
+    <title>Estudo Bíblico</title>
 </head>
 
 <body>
     <table>
-        <caption>ESTUDOS BÍBLICOS</caption>
+        <caption>ESTUDO BÍBLICO</caption>
         <thead>
             <tr>
                 <th onclick="assuntos()">ASSUNTOS</th>
