--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 <td></td>
                 <td onclick="fbible8()">Ef 6, 10 - 20</td>
             </tr>
+            <tr>
+                <td><i>Manifestação do anjo Rafael</i></td>
+                <td></td>
+                <td onclick="fbible9()">Tb 12, 1.5-15.20</td>
+            </tr>
         </tbody>
     </table>
 </body>
