--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
                 <td></td>
                 <td onclick="fbible9()">Tb 12, 1.5-15.20</td>
             </tr>
+            <tr>
+                <td><i>Plenitude dos tempos</i></td>
+                <td onclick="f16()">2600</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
