--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                 <td onclick="f16()">2600</td>
                 <td></td>
             </tr>
+            <tr>
+                <td><i>Vida eterna, prêmio dos justos</i></td>
+                <td onclick="f17()">2002</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
