--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
                 <td onclick="f17()">2002</td>
                 <td></td>
             </tr>
+            <tr>
+                <td><i>Diversidade e complementariedade dos sexos</i></td>
+                <td onclick="f18()">2333</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
