--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
                 <td onclick="f18()">2333</td>
                 <td></td>
             </tr>
+            <tr>
+                <td><i>A vinda de Cristo</i></td>
+                <td></td>
+                <td onclick="fbible10()">1 Ts 4, 13 - 18</td>
+            </tr>
         </tbody>
     </table>
 </body>
