--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
                 <td></td>
                 <td onclick="fbible10()">1 Ts 4, 13 - 18</td>
             </tr>
+            <tr>
+                <td><i>Exemplo da humildade de Cristo</i></td>
+                <td></td>
+                <td onclick="fbible11()">Fl 2, 6 - 11</td>
+            </tr>
+            <tr>
+                <td><i>Conversa de Jesus com Nicodemos</i></td>
+                <td></td>
+                <td onclick="fbible12()">Jo 3, 13 - 17</td>
+            </tr>
         </tbody>
     </table>
 </body>
