--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
                 <td></td>
                 <td onclick="fbible12()">Jo 3, 13 - 17</td>
             </tr>
+            <tr>
+                <td><i>Cultura de vida e aborto</i></td>
+                <td onclick="f19()">2270</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><i>Instabilidade da felicidade material</i></td>
+                <td></td>
+                <td onclick="fbible13()">Sl 48</td>
+            </tr>
         </tbody>
     </table>
 </body>
