--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                 <td></td>
                 <td onclick="fbible13()">Sl 48</td>
             </tr>
+            <tr>
+                <td><i>Recomendações diversas</i></td>
+                <td></td>
+                <td onclick="fbible14()">Fl 4, 6 - 9</td>
+            </tr>
         </tbody>
     </table>
 </body>
