--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
                 <td></td>
                 <td onclick="fbible14()">Fl 4, 6 - 9</td>
             </tr>
+            <tr>
+                <td><i>Cântico de vitória</i></td>
+                <td></td>
+                <td onclick="fbible15()">Is 25, 6 - 10a</td>
+            </tr>
         </tbody>
     </table>
 </body>
