--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
                 <td></td>
                 <td onclick="fbible15()">Is 25, 6 - 10a</td>
             </tr>
+            <tr>
+                <td><i>Vocação de Ciro</i></td>
+                <td></td>
+                <td onclick="fbible16()">Is 45, 1. 4 - 6</td>
+            </tr>
         </tbody>
     </table>
 </body>
