--- a/index.html
+++ b/index.html
@@ -185,6 +185,21 @@
                 <td></td>
                 <td onclick="fbible16()">Is 45, 1. 4 - 6</td>
             </tr>
+            <tr>
+                <td><i>Novo céu e nova terra</i></td>
+                <td></td>
+                <td onclick="fbible17()">Ap 21, 1 - 5</td>
+            </tr>
+            <tr>
+                <td><i>Parábola do homem rico</i></td>
+                <td></td>
+                <td onclick="fbible18()">Lc 12, 13 - 21</td>
+            </tr>
+            <tr>
+                <td><i>Mensagem a Laodiceia</i></td>
+                <td></td>
+                <td onclick="fbible19()">Ap 3, 17 - 19</td>
+            </tr>
         </tbody>
     </table>
 </body>
