--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
                 <td></td>
                 <td onclick="fbible19()">Ap 3, 17 - 19</td>
             </tr>
+            <tr>
+                <td><i>Falsa mentalidade dos ímpios; Diferente sorte dos justos e dos ímpios</i></td>
+                <td></td>
+                <td onclick="fbible20()">Sb 2, 23 - 3, 9</td>
+            </tr>
+            <tr>
+                <td><i>Beleza e bondade da criação</i></td>
+                <td onclick="f20()">299</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
