--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
                 <td onclick="f20()">299</td>
                 <td></td>
             </tr>
+            <tr>
+                <td><i>Pregação em Atenas</i></td>
+                <td></td>
+                <td onclick="fbible21()">At 17, 24 - 29</td>
+            </tr>
         </tbody>
     </table>
 </body>
