--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
                 <td></td>
                 <td onclick="fbible21()">At 17, 24 - 29</td>
             </tr>
+            <tr>
+                <td><i>Relação do homem com a criação</i></td>
+                <td onclick="f21()">1469</td>
+                <td></td>
+            </tr>
         </tbody>
     </table>
 </body>
