--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
                 <td onclick="f21()">1469</td>
                 <td></td>
             </tr>
+            <tr>
+                <td><i>Jesus, único caminho</i></td>
+                <td></td>
+                <td onclick="fbible22()">Jo 14, 1 - 6</td>
+            </tr>
+            <tr>
+                <td><i>A videira e os ramos</i></td>
+                <td></td>
+                <td onclick="fbible23()">Jo 15, 1 - 8</td>
+            </tr>
         </tbody>
     </table>
 </body>
